src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>CategoryID__c</fullName>
        <label>Category ID</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>Discontinued__c</fullName>
        <label>Discontinued</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <label>Product ID</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>Product Name</label>
        <type>Text</type>
        <length>40</length>
    </fields>
    <fields>
        <fullName>QuantityPerUnit__c</fullName>
        <label>Quantity Per Unit</label>
        <type>Text</type>
        <length>20</length>
    </fields>
    <fields>
        <fullName>ReorderLevel__c</fullName>
        <label>Reorder Level</label>
        <type>Number</type>
        <precision>5</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>SupplierID__c</fullName>
        <label>Supplier ID</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Price</label>
        <type>Currency</type>
        <precision>16</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>UnitsInStock__c</fullName>
        <label>Units In Stock</label>
        <type>Number</type>
        <precision>5</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>UnitsOnOrder__c</fullName>
        <label>Units On Order</label>
        <type>Number</type>
        <precision>5</precision>
        <scale>0</scale>
    </fields>
    <label>Product</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>{!label} Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>